# gross-net-calculator-switzerland

./: .gitignore  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
config/: options.json
gross_net_calculator/: gross_net_calculator.py
tests/: main_test.py
tests/gross_net_calculator/: gross_net_calculator_test.py
